# renormalize

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: main.py  renormalize.py  util.py
